feat: add share on twitter button

--- a/src/components/save/save.styles.scss
+++ b/src/components/save/save.styles.scss
@@ -2,6 +2,14 @@
   font-size: 32px;
   cursor: pointer;
   position: absolute;
+  left: 71%;
+  width: fit-content;
+}
+
+.twitter-button {
+  font-size: 32px;
+  cursor: pointer;
+  position: absolute;
   left: 75%;
   width: fit-content;
 }
